# terminal_typer

./: Cargo.toml  README.md  log.txt  scores.txt
src/: main.rs
