[package]
name = "typing_game"
version = "0.1.0"
authors = ["Wyvern"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
# clap = "2.33.1"
# clap = { git = "https://github.com/clap-rs/clap/" }
clap = "~3.0.0-beta.1"
strum = "0.18.0"
strum_macros = "0.18.0"